refactor: initialize collate function to import module

--- a/jupyter_lab/measurement_win.ipynb
+++ b/jupyter_lab/measurement_win.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "5fd53788-c82d-4767-a92d-a9e20628dcaa",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
     "import torch\n",
     "from torch.utils.data import Dataset, ConcatDataset, DataLoader\n",
     "from custom_dataset import CustomDataset\n",
-    "file_name = 'alveolar'"
+    "file_name = 'palate'"
    ]
   },
   {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "e8fa066e-b085-4fc8-bdbb-24c1e122484f",
    "metadata": {},
    "outputs": [
@@ -212,61 +212,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([14])\n",
-      "Time: tensor([1.3220, 1.4240, 1.2210, 1.8290, 1.3220, 1.3230, 1.2220, 1.2230, 1.3230,\n",
-      "        1.2220, 1.1210, 1.1200, 1.4240, 1.1210])\n",
-      "Pin1: tensor([[ 9,  0,  0,  0,  0,  0],\n",
-      "        [11,  8,  5,  0,  0,  0],\n",
-      "        [ 5,  0,  0,  0,  0,  0],\n",
-      "        [ 8, 10,  8, 17,  7,  6],\n",
-      "        [17,  0,  0,  0,  0,  0],\n",
-      "        [ 5,  9,  0,  0,  0,  0],\n",
-      "        [ 9,  0,  0,  0,  0,  0],\n",
-      "        [ 8, 13,  9, 27, 45,  0],\n",
-      "        [22,  7,  0,  0,  0,  0],\n",
-      "        [ 7, 10, 15,  7,  0,  0],\n",
-      "        [12, 10,  0,  0,  0,  0],\n",
-      "        [16,  0,  0,  0,  0,  0],\n",
-      "        [11, 16,  7, 15, 11,  0],\n",
-      "        [ 9, 15,  6, 18,  0,  0]])\n",
-      "Pin2: tensor([[ 7, 13, 10,  0,  0,  0,  0,  0,  0],\n",
-      "        [11,  9,  5, 17, 16, 11,  8,  0,  0],\n",
-      "        [ 7,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-      "        [17, 21, 18,  9, 15, 10, 13,  5, 13],\n",
-      "        [13,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-      "        [14, 14, 17,  0,  0,  0,  0,  0,  0],\n",
-      "        [ 8,  6,  5, 12,  0,  0,  0,  0,  0],\n",
-      "        [12,  9, 14, 10, 13,  0,  0,  0,  0],\n",
-      "        [ 7, 14, 15,  0,  0,  0,  0,  0,  0],\n",
-      "        [13, 14, 13,  8, 23,  6,  0,  0,  0],\n",
-      "        [14, 12,  8,  0,  0,  0,  0,  0,  0],\n",
-      "        [15,  9,  0,  0,  0,  0,  0,  0,  0],\n",
-      "        [15, 18, 15, 18,  7, 11,  0,  0,  0],\n",
-      "        [14, 12, 14,  8,  9,  0,  0,  0,  0]])\n"
+      "torch.Size([4])\n",
+      "Time: tensor([1.8290, 2.1300, 1.8281, 2.1310])\n",
+      "Pin1: tensor([[10,  6, 11, 15,  0,  0,  0],\n",
+      "        [17,  0,  0,  0,  0,  0,  0],\n",
+      "        [16, 14,  6,  5,  0,  0,  0],\n",
+      "        [ 6, 10, 27, 12,  0,  0,  0]])\n",
+      "Pin2: tensor([[11, 31, 16, 19,  6, 21,  6],\n",
+      "        [ 5,  0,  0,  0,  0,  0,  0],\n",
+      "        [23,  6, 14, 11,  0,  0,  0],\n",
+      "        [ 6,  7, 11,  0,  0,  0,  0]])\n"
      ]
     }
    ],
    "source": [
     "# load Dataset\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "\n",
+    "from padding import PaddingCollate\n",
     "loaded_dataset = torch.load(file_name + '.pth')\n",
     "\n",
-    "def my_collate_fn(batch):\n",
-    "    # 각 컬럼에 대해 분리하여 저장합니다.\n",
-    "    time, pin1, pin2 = zip(*batch)\n",
-    "    \n",
-    "    # 'time' 데이터는 이미 텐서이므로 스택을 사용하여 배치 차원을 추가합니다.\n",
-    "    time_tensor = torch.stack(time)\n",
-    "    \n",
-    "    # 'pin1'과 'pin2'는 서로 다른 길이를 가질 수 있으므로 패딩이 필요합니다.\n",
-    "    pin1_padded = pad_sequence(pin1, batch_first=True, padding_value=0)\n",
-    "    pin2_padded = pad_sequence(pin2, batch_first=True, padding_value=0)\n",
-    "    \n",
-    "    return time_tensor, pin1_padded, pin2_padded\n",
-    "\n",
     "# DataLoader에 로드된 데이터셋 사용\n",
-    "dataloader = DataLoader(loaded_dataset, batch_size=100, shuffle=True, collate_fn=my_collate_fn)\n",
+    "dataloader = DataLoader(loaded_dataset, batch_size=100, shuffle=True, collate_fn=PaddingCollate())\n",
     "\n",
     "for time, pin1, pin2 in dataloader:\n",
     "    print(time.size())\n",
