chore: edit batch_size add test cells

--- a/jupyter_lab/concat_datasets.ipynb
+++ b/jupyter_lab/concat_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3df4eadc-8416-42f1-970c-514f05d28a23",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,8 @@
       "bilabial_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n",
       "alveolar_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n",
       "soft_palate_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n",
-      "palate_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n"
+      "palate_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n",
+      "guttural_data 타입: <class 'custom_dataset.CustomDataset'>, 사이즈: 50\n"
      ]
     }
    ],
@@ -26,7 +27,7 @@
     "alveolar_data = torch.load('alveolar.pth')\n",
     "soft_palate_data = torch.load('soft_palate.pth')\n",
     "palate_data = torch.load('palate.pth')\n",
-    "#guttural_data = torch.load('guttural.pth')\n",
+    "guttural_data = torch.load('guttural.pth')\n",
     "\n",
     "# 데이터셋의 구조가 맞지 않는다면 수정\n",
     "# 데이터가 튜플 형태일 경우 리스트로 변환하거나 딕셔너리 형태로 재구성해야함\n",
@@ -35,12 +36,12 @@
     "print (f'alveolar_data 타입: {type(alveolar_data)}, 사이즈: {len(alveolar_data)}')\n",
     "print (f'soft_palate_data 타입: {type(soft_palate_data)}, 사이즈: {len(soft_palate_data)}')\n",
     "print (f'palate_data 타입: {type(palate_data)}, 사이즈: {len(palate_data)}')\n",
-    "#print (f'guttural_data 타입: {type(guttural_data)}, 사이즈: {len(guttural_data)}')"
+    "print (f'guttural_data 타입: {type(guttural_data)}, 사이즈: {len(guttural_data)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "95b43bec-b704-4ef6-acfa-16382a108b58",
    "metadata": {},
    "outputs": [
@@ -50,6 +51,18 @@
      "text": [
       "데이터셋 결합이 완료되었습니다.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\UIT801-\\Desktop\\graduationProject\\jupyter_lab\\custom_dataset.py:17: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  x = torch.tensor(data_point['time'], dtype=torch.float)\n",
+      "C:\\Users\\UIT801-\\Desktop\\graduationProject\\jupyter_lab\\custom_dataset.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  y = self.pad_sequence(torch.tensor(data_point['pin1']), self.max_length)\n",
+      "C:\\Users\\UIT801-\\Desktop\\graduationProject\\jupyter_lab\\custom_dataset.py:21: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  z = self.pad_sequence(torch.tensor(data_point['pin2']), self.max_length)\n"
+     ]
     }
    ],
    "source": [
@@ -58,10 +71,9 @@
     "alveolar_data_modified = [{'data': data, 'label': 1} for data in alveolar_data]\n",
     "soft_palate_data_modified = [{'data': data, 'label': 2} for data in soft_palate_data]\n",
     "palate_data_modified = [{'data': data, 'label': 3} for data in palate_data]\n",
-    "#guttural_data_modified = [{'data': data, 'label': 4} for data in guttural_data]\n",
+    "guttural_data_modified = [{'data': data, 'label': 4} for data in guttural_data]\n",
     "# ConcatDataset 생성\n",
-    "concatenated_dataset = ConcatDataset([bilabial_data_modified, alveolar_data_modified, soft_palate_data_modified, palate_data_modified])\n",
-    "#concatenated_dataset = ConcatDataset([bilabial_data_modified, alveolar_data_modified, soft_palate_data_modified, palate_data_modified, guttural_data_modified])\n",
+    "concatenated_dataset = ConcatDataset([bilabial_data_modified, alveolar_data_modified, soft_palate_data_modified, palate_data_modified, guttural_data_modified])\n",
     "\n",
     "# 결합된 데이터셋 저장\n",
     "try:\n",
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8b9a4a23-709c-4665-b889-fb3c52d3c3f0",
    "metadata": {},
    "outputs": [
@@ -81,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Concatenated Dataset Length: 200\n",
+      "Concatenated Dataset Length: 250\n",
       "Data 0 : {'data': (tensor(1.7287), tensor([10,  8, 11, 12, 18, 23,  0,  0]), tensor([16, 13,  5, 13,  6, 13,  0,  0])), 'label': 0}\n",
       "Data 1 : {'data': (tensor(1.8293), tensor([ 5, 48, 12,  7,  7,  7,  0,  0]), tensor([13, 13, 10,  5,  0,  0,  0,  0])), 'label': 0}\n",
       "Data 2 : {'data': (tensor(1.7278), tensor([20, 14, 48,  9,  5,  0,  0,  0]), tensor([ 6, 16, 13, 11,  0,  0,  0,  0])), 'label': 0}\n",
@@ -281,7 +293,57 @@
       "Data 196 : {'data': (tensor(1.7271), tensor([32, 42,  5,  0,  0,  0,  0,  0,  0,  0,  0,  0]), tensor([6, 7, 7, 5, 0, 0, 0, 0, 0, 0, 0, 0])), 'label': 3}\n",
       "Data 197 : {'data': (tensor(1.7268), tensor([19, 14, 31,  0,  0,  0,  0,  0,  0,  0,  0,  0]), tensor([9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])), 'label': 3}\n",
       "Data 198 : {'data': (tensor(1.7272), tensor([18, 32, 66,  9,  5,  0,  0,  0,  0,  0,  0,  0]), tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])), 'label': 3}\n",
-      "Data 199 : {'data': (tensor(1.8285), tensor([38, 65,  9,  7,  0,  0,  0,  0,  0,  0,  0,  0]), tensor([7, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])), 'label': 3}\n"
+      "Data 199 : {'data': (tensor(1.8285), tensor([38, 65,  9,  7,  0,  0,  0,  0,  0,  0,  0,  0]), tensor([7, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])), 'label': 3}\n",
+      "Data 200 : {'data': (tensor(1.6270), tensor([32, 18, 19, 20,  5]), tensor([25, 58, 32, 94, 54])), 'label': 4}\n",
+      "Data 201 : {'data': (tensor(1.7273), tensor([ 6,  7,  5, 12,  6]), tensor([ 7,  6,  7, 17, 10])), 'label': 4}\n",
+      "Data 202 : {'data': (tensor(1.5250), tensor([14, 26, 15,  0,  0]), tensor([24, 28, 32, 74, 56])), 'label': 4}\n",
+      "Data 203 : {'data': (tensor(1.8285), tensor([10,  6,  5,  0,  0]), tensor([37, 10, 17, 12,  9])), 'label': 4}\n",
+      "Data 204 : {'data': (tensor(1.7281), tensor([5, 5, 5, 7, 0]), tensor([30, 25, 31, 18,  5])), 'label': 4}\n",
+      "Data 205 : {'data': (tensor(2.0311), tensor([0., 0., 0., 0., 0.]), tensor([ 5, 26, 28, 87, 10])), 'label': 4}\n",
+      "Data 206 : {'data': (tensor(1.7279), tensor([ 8,  6, 19,  9,  0]), tensor([ 33,  41,  44, 132,  14])), 'label': 4}\n",
+      "Data 207 : {'data': (tensor(1.8281), tensor([15,  0,  0,  0,  0]), tensor([46, 16, 23, 30,  6])), 'label': 4}\n",
+      "Data 208 : {'data': (tensor(1.8281), tensor([ 5, 12, 12,  0,  0]), tensor([60,  7, 27, 11,  5])), 'label': 4}\n",
+      "Data 209 : {'data': (tensor(1.9301), tensor([22, 18,  0,  0,  0]), tensor([45, 25, 16, 41, 62])), 'label': 4}\n",
+      "Data 210 : {'data': (tensor(1.7278), tensor([5, 0, 0, 0, 0]), tensor([49, 32, 14, 18, 57])), 'label': 4}\n",
+      "Data 211 : {'data': (tensor(1.7270), tensor([17,  0,  0,  0,  0]), tensor([ 7, 16, 15, 10, 43])), 'label': 4}\n",
+      "Data 212 : {'data': (tensor(1.8282), tensor([0., 0., 0., 0., 0.]), tensor([ 9, 18, 17,  9,  6])), 'label': 4}\n",
+      "Data 213 : {'data': (tensor(1.7281), tensor([0., 0., 0., 0., 0.]), tensor([37,  7,  5, 43, 36])), 'label': 4}\n",
+      "Data 214 : {'data': (tensor(1.7272), tensor([35,  0,  0,  0,  0]), tensor([ 9, 49, 51, 90, 12])), 'label': 4}\n",
+      "Data 215 : {'data': (tensor(1.7270), tensor([0., 0., 0., 0., 0.]), tensor([23, 17, 22, 20, 11])), 'label': 4}\n",
+      "Data 216 : {'data': (tensor(1.7271), tensor([7, 0, 0, 0, 0]), tensor([ 8, 19, 18, 40, 25])), 'label': 4}\n",
+      "Data 217 : {'data': (tensor(1.8280), tensor([0., 0., 0., 0., 0.]), tensor([28, 31, 25, 32, 14])), 'label': 4}\n",
+      "Data 218 : {'data': (tensor(1.9306), tensor([0., 0., 0., 0., 0.]), tensor([34, 10, 28, 65, 23])), 'label': 4}\n",
+      "Data 219 : {'data': (tensor(1.9291), tensor([5, 0, 0, 0, 0]), tensor([ 7, 12,  5,  5, 59])), 'label': 4}\n",
+      "Data 220 : {'data': (tensor(1.6270), tensor([9, 0, 0, 0, 0]), tensor([26, 23, 10, 33, 47])), 'label': 4}\n",
+      "Data 221 : {'data': (tensor(1.7272), tensor([7, 7, 0, 0, 0]), tensor([53, 35,  6, 34, 43])), 'label': 4}\n",
+      "Data 222 : {'data': (tensor(1.8286), tensor([13,  0,  0,  0,  0]), tensor([24, 12, 22, 14, 30])), 'label': 4}\n",
+      "Data 223 : {'data': (tensor(1.7271), tensor([0., 0., 0., 0., 0.]), tensor([11,  8,  9, 14, 99])), 'label': 4}\n",
+      "Data 224 : {'data': (tensor(1.7276), tensor([16,  9,  0,  0,  0]), tensor([22, 40, 45, 50, 30])), 'label': 4}\n",
+      "Data 225 : {'data': (tensor(1.9300), tensor([28,  0,  0,  0,  0]), tensor([21, 12, 23, 41, 59])), 'label': 4}\n",
+      "Data 226 : {'data': (tensor(1.7271), tensor([25, 22,  0,  0,  0]), tensor([27, 17, 26, 23, 40])), 'label': 4}\n",
+      "Data 227 : {'data': (tensor(1.9310), tensor([15,  0,  0,  0,  0]), tensor([ 6, 36, 10, 12, 36])), 'label': 4}\n",
+      "Data 228 : {'data': (tensor(1.8284), tensor([ 7, 22,  0,  0,  0]), tensor([10, 10, 22, 11, 25])), 'label': 4}\n",
+      "Data 229 : {'data': (tensor(1.7280), tensor([41, 26, 37,  0,  0]), tensor([ 9, 27, 57, 25, 75])), 'label': 4}\n",
+      "Data 230 : {'data': (tensor(1.2228), tensor([22, 15, 23,  6,  0]), tensor([10, 16, 12, 12,  0])), 'label': 4}\n",
+      "Data 231 : {'data': (tensor(1.4251), tensor([ 6, 19,  6, 11,  0]), tensor([12, 15, 10, 10,  0])), 'label': 4}\n",
+      "Data 232 : {'data': (tensor(1.5261), tensor([ 8, 18,  8,  7,  0]), tensor([11, 16,  9, 11,  0])), 'label': 4}\n",
+      "Data 233 : {'data': (tensor(1.4251), tensor([ 6, 10,  8,  8,  0]), tensor([14, 16,  7, 21,  0])), 'label': 4}\n",
+      "Data 234 : {'data': (tensor(1.5262), tensor([28,  6,  7,  5,  0]), tensor([15,  9, 12, 12,  0])), 'label': 4}\n",
+      "Data 235 : {'data': (tensor(1.4252), tensor([11, 11,  8,  0,  0]), tensor([12, 19, 16, 10,  0])), 'label': 4}\n",
+      "Data 236 : {'data': (tensor(1.4252), tensor([13,  0,  0,  0,  0]), tensor([23,  9, 11, 11,  0])), 'label': 4}\n",
+      "Data 237 : {'data': (tensor(1.4252), tensor([ 8,  9, 23,  9,  0]), tensor([21, 20, 25, 18,  0])), 'label': 4}\n",
+      "Data 238 : {'data': (tensor(1.3241), tensor([10, 20,  0,  0,  0]), tensor([21, 19, 20, 15,  0])), 'label': 4}\n",
+      "Data 239 : {'data': (tensor(1.4258), tensor([29,  9,  5,  0,  0]), tensor([15, 21, 18, 15,  0])), 'label': 4}\n",
+      "Data 240 : {'data': (tensor(1.4253), tensor([7, 6, 0, 0, 0]), tensor([19, 20, 16, 15,  0])), 'label': 4}\n",
+      "Data 241 : {'data': (tensor(1.4251), tensor([6, 0, 0, 0, 0]), tensor([23, 21, 24, 23,  0])), 'label': 4}\n",
+      "Data 242 : {'data': (tensor(1.4248), tensor([8, 0, 0, 0, 0]), tensor([23, 24, 22, 24,  0])), 'label': 4}\n",
+      "Data 243 : {'data': (tensor(1.3232), tensor([19,  5,  0,  0,  0]), tensor([25, 30, 19, 14,  0])), 'label': 4}\n",
+      "Data 244 : {'data': (tensor(1.4243), tensor([8, 0, 0, 0, 0]), tensor([25, 23, 23, 16,  0])), 'label': 4}\n",
+      "Data 245 : {'data': (tensor(1.4257), tensor([33, 10,  0,  0,  0]), tensor([20, 20, 23, 23,  0])), 'label': 4}\n",
+      "Data 246 : {'data': (tensor(1.3243), tensor([ 5, 17, 18, 17,  0]), tensor([23, 24, 20, 19,  0])), 'label': 4}\n",
+      "Data 247 : {'data': (tensor(1.3244), tensor([ 6, 12, 22,  0,  0]), tensor([26, 25, 26, 22,  0])), 'label': 4}\n",
+      "Data 248 : {'data': (tensor(1.4262), tensor([12,  8,  9,  0,  0]), tensor([25, 25, 28, 25,  0])), 'label': 4}\n",
+      "Data 249 : {'data': (tensor(1.4248), tensor([ 8, 14,  0,  0,  0]), tensor([19, 26, 23, 23,  0])), 'label': 4}\n"
      ]
     }
    ],
@@ -297,6 +359,14 @@
     "for idx, data in enumerate(concatenated_dataset):\n",
     "    print(\"Data\", idx, \":\", data)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d495fac2-8425-4602-8645-e88365a1208a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
