--- a/jupyter_lab/learn_rnn_model.ipynb
+++ b/jupyter_lab/learn_rnn_model.ipynb
@@ -228,28 +228,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "ea44c1d1-4598-4df6-90ab-45357ca0d772",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-10T08:24:06.855487Z",
+     "start_time": "2024-05-10T08:24:04.499078Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torch.utils.data.dataset.ConcatDataset object at 0x000001D8DB99D5D0>\n",
-      "Epoch [1/100], Loss: 1.5436136722564697\n",
-      "Epoch [2/100], Loss: 0.480072882771492\n",
-      "Epoch [3/100], Loss: 0.06180946938693523\n",
-      "Epoch [4/100], Loss: 0.15235181748867035\n"
+      "<torch.utils.data.dataset.ConcatDataset object at 0x164d22110>\n",
+      "Epoch [1/100], Loss: 2.1888524770736693\n",
+      "Epoch [2/100], Loss: 0.9601564645767212\n",
+      "Epoch [3/100], Loss: 0.12276406399905682\n",
+      "Epoch [4/100], Loss: 0.19288038313388825\n",
+      "Epoch [5/100], Loss: 0.12196135967969894\n",
+      "Epoch [6/100], Loss: 0.027987163886427878\n",
+      "Epoch [7/100], Loss: 0.0495876282453537\n",
+      "Epoch [8/100], Loss: 0.03968873582780361\n",
+      "Epoch [9/100], Loss: 0.02050492763519287\n",
+      "Epoch [10/100], Loss: 0.023515113070607184\n",
+      "Epoch [11/100], Loss: 0.022517291083931922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\UIT801-\\AppData\\Local\\Temp\\ipykernel_122620\\2169376944.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/07/zn9pcs3x2k73h6s55801xzfr0000gn/T/ipykernel_82761/1795809899.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  padded_pin1.append(PaddingCollate.pad_sequence(torch.tensor(seq1), max_length))\n",
-      "C:\\Users\\UIT801-\\AppData\\Local\\Temp\\ipykernel_122620\\2169376944.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/07/zn9pcs3x2k73h6s55801xzfr0000gn/T/ipykernel_82761/1795809899.py:26: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  padded_pin2.append(PaddingCollate.pad_sequence(torch.tensor(seq2), max_length))\n"
      ]
     },
@@ -257,102 +269,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [5/100], Loss: 0.06093480475246906\n",
-      "Epoch [6/100], Loss: 0.02264699451625347\n",
-      "Epoch [7/100], Loss: 0.040650004893541335\n",
-      "Epoch [8/100], Loss: 0.03085224740207195\n",
-      "Epoch [9/100], Loss: 0.018884951807558538\n",
-      "Epoch [10/100], Loss: 0.021866797283291817\n",
-      "Epoch [11/100], Loss: 0.020743385516107084\n",
-      "Epoch [12/100], Loss: 0.018189794570207595\n",
-      "Epoch [13/100], Loss: 0.01860718633979559\n",
-      "Epoch [14/100], Loss: 0.018354412727057935\n",
-      "Epoch [15/100], Loss: 0.017568081244826318\n",
-      "Epoch [16/100], Loss: 0.01776074431836605\n",
-      "Epoch [17/100], Loss: 0.017426693066954612\n",
-      "Epoch [18/100], Loss: 0.01716557703912258\n",
-      "Epoch [19/100], Loss: 0.017192034982144833\n",
-      "Epoch [20/100], Loss: 0.017048465088009834\n",
-      "Epoch [21/100], Loss: 0.01688509341329336\n",
-      "Epoch [22/100], Loss: 0.016784829273819923\n",
-      "Epoch [23/100], Loss: 0.01680669654160738\n",
-      "Epoch [24/100], Loss: 0.016618044674396516\n",
-      "Epoch [25/100], Loss: 0.016462823562324046\n",
-      "Epoch [26/100], Loss: 0.016418404318392275\n",
-      "Epoch [27/100], Loss: 0.016306815110146998\n",
-      "Epoch [28/100], Loss: 0.016188302636146547\n",
-      "Epoch [29/100], Loss: 0.016235475055873395\n",
-      "Epoch [30/100], Loss: 0.015936692990362645\n",
-      "Epoch [31/100], Loss: 0.015844833850860596\n",
-      "Epoch [32/100], Loss: 0.01564302295446396\n",
-      "Epoch [33/100], Loss: 0.015462346747517586\n",
-      "Epoch [34/100], Loss: 0.015215878561139106\n",
-      "Epoch [35/100], Loss: 0.015019015222787858\n",
-      "Epoch [36/100], Loss: 0.014775667898356914\n",
-      "Epoch [37/100], Loss: 0.01458025984466076\n",
-      "Epoch [38/100], Loss: 0.014355677366256713\n",
-      "Epoch [39/100], Loss: 0.01426953226327896\n",
-      "Epoch [40/100], Loss: 0.014079583808779716\n",
-      "Epoch [41/100], Loss: 0.014007982052862644\n",
-      "Epoch [42/100], Loss: 0.013736126571893692\n",
-      "Epoch [43/100], Loss: 0.013606376387178898\n",
-      "Epoch [44/100], Loss: 0.013477663695812225\n",
-      "Epoch [45/100], Loss: 0.013327511213719844\n",
-      "Epoch [46/100], Loss: 0.013149646669626236\n",
-      "Epoch [47/100], Loss: 0.012964677438139916\n",
-      "Epoch [48/100], Loss: 0.012998553551733493\n",
-      "Epoch [49/100], Loss: 0.012906893715262413\n",
-      "Epoch [50/100], Loss: 0.012607807666063309\n",
-      "Epoch [51/100], Loss: 0.012383036594837905\n",
-      "Epoch [52/100], Loss: 0.012209964543581009\n",
-      "Epoch [53/100], Loss: 0.01199352378025651\n",
-      "Epoch [54/100], Loss: 0.011806041467934847\n",
-      "Epoch [55/100], Loss: 0.011595463100820779\n",
-      "Epoch [56/100], Loss: 0.01135396035388112\n",
-      "Epoch [57/100], Loss: 0.011294307839125394\n",
-      "Epoch [58/100], Loss: 0.011078546103090049\n",
-      "Epoch [59/100], Loss: 0.010960003826767206\n",
-      "Epoch [60/100], Loss: 0.011102973856031895\n",
-      "Epoch [61/100], Loss: 0.010762758646160364\n",
-      "Epoch [62/100], Loss: 0.010971293691545725\n",
-      "Epoch [63/100], Loss: 0.010654961317777633\n",
-      "Epoch [64/100], Loss: 0.010519711673259735\n",
-      "Epoch [65/100], Loss: 0.010550969187170267\n",
-      "Epoch [66/100], Loss: 0.010460195876657963\n",
-      "Epoch [67/100], Loss: 0.010396461188793182\n",
-      "Epoch [68/100], Loss: 0.010363015066832303\n",
-      "Epoch [69/100], Loss: 0.010130510572344065\n",
-      "Epoch [70/100], Loss: 0.010090997908264399\n",
-      "Epoch [71/100], Loss: 0.01004443047568202\n",
-      "Epoch [72/100], Loss: 0.00999082876369357\n",
-      "Epoch [73/100], Loss: 0.010131168272346258\n",
-      "Epoch [74/100], Loss: 0.009902807697653771\n",
-      "Epoch [75/100], Loss: 0.010045506246387958\n",
-      "Epoch [76/100], Loss: 0.009776746202260257\n",
-      "Epoch [77/100], Loss: 0.009922494553029538\n",
-      "Epoch [78/100], Loss: 0.009808781277388334\n",
-      "Epoch [79/100], Loss: 0.009380795247852802\n",
-      "Epoch [80/100], Loss: 0.009692087210714817\n",
-      "Epoch [81/100], Loss: 0.009375295601785183\n",
-      "Epoch [82/100], Loss: 0.009540660306811333\n",
-      "Epoch [83/100], Loss: 0.009462659806013107\n",
-      "Epoch [84/100], Loss: 0.00912837740033865\n",
-      "Epoch [85/100], Loss: 0.009223387949168682\n",
-      "Epoch [86/100], Loss: 0.00930200880393386\n",
-      "Epoch [87/100], Loss: 0.009264286607503891\n",
-      "Epoch [88/100], Loss: 0.00920746773481369\n",
-      "Epoch [89/100], Loss: 0.009182151965796947\n",
-      "Epoch [90/100], Loss: 0.009486336261034012\n",
-      "Epoch [91/100], Loss: 0.009267289750277996\n",
-      "Epoch [92/100], Loss: 0.009810976404696702\n",
-      "Epoch [93/100], Loss: 0.009490375313907862\n",
-      "Epoch [94/100], Loss: 0.009043156541883946\n",
-      "Epoch [95/100], Loss: 0.009172520693391561\n",
-      "Epoch [96/100], Loss: 0.00878349794074893\n",
-      "Epoch [97/100], Loss: 0.009149274788796902\n",
-      "Epoch [98/100], Loss: 0.009087996184825897\n",
-      "Epoch [99/100], Loss: 0.009139732643961906\n",
-      "Epoch [100/100], Loss: 0.008751171082258225\n",
+      "Epoch [12/100], Loss: 0.018279915675520897\n",
+      "Epoch [13/100], Loss: 0.01869603954255581\n",
+      "Epoch [14/100], Loss: 0.018366300500929356\n",
+      "Epoch [15/100], Loss: 0.01777171213179827\n",
+      "Epoch [16/100], Loss: 0.01727298814803362\n",
+      "Epoch [17/100], Loss: 0.01689242012798786\n",
+      "Epoch [18/100], Loss: 0.016749514639377593\n",
+      "Epoch [19/100], Loss: 0.016737064719200133\n",
+      "Epoch [20/100], Loss: 0.016555852442979812\n",
+      "Epoch [21/100], Loss: 0.016484660282731056\n",
+      "Epoch [22/100], Loss: 0.01634981818497181\n",
+      "Epoch [23/100], Loss: 0.01633399948477745\n",
+      "Epoch [24/100], Loss: 0.016179878450930118\n",
+      "Epoch [25/100], Loss: 0.016180213913321494\n",
+      "Epoch [26/100], Loss: 0.016078860498964787\n",
+      "Epoch [27/100], Loss: 0.01602744422852993\n",
+      "Epoch [28/100], Loss: 0.015990063920617102\n",
+      "Epoch [29/100], Loss: 0.015984495915472508\n",
+      "Epoch [30/100], Loss: 0.01588781625032425\n",
+      "Epoch [31/100], Loss: 0.015794379636645317\n",
+      "Epoch [32/100], Loss: 0.015803500637412073\n",
+      "Epoch [33/100], Loss: 0.01558336429297924\n",
+      "Epoch [34/100], Loss: 0.015680077113211156\n",
+      "Epoch [35/100], Loss: 0.015516090206801891\n",
+      "Epoch [36/100], Loss: 0.015472139604389668\n",
+      "Epoch [37/100], Loss: 0.015318694151937961\n",
+      "Epoch [38/100], Loss: 0.015188543684780597\n",
+      "Epoch [39/100], Loss: 0.015061881765723229\n",
+      "Epoch [40/100], Loss: 0.014924286678433419\n",
+      "Epoch [41/100], Loss: 0.014748045802116394\n",
+      "Epoch [42/100], Loss: 0.014549868740141391\n",
+      "Epoch [43/100], Loss: 0.01441404763609171\n",
+      "Epoch [44/100], Loss: 0.014114063978195191\n",
+      "Epoch [45/100], Loss: 0.013932568579912185\n",
+      "Epoch [46/100], Loss: 0.013663431257009506\n",
+      "Epoch [47/100], Loss: 0.013658487237989902\n",
+      "Epoch [48/100], Loss: 0.013455740548670292\n",
+      "Epoch [49/100], Loss: 0.013230991177260875\n",
+      "Epoch [50/100], Loss: 0.012993768230080605\n",
+      "Epoch [51/100], Loss: 0.012852564640343189\n",
+      "Epoch [52/100], Loss: 0.012732587940990924\n",
+      "Epoch [53/100], Loss: 0.012661358714103699\n",
+      "Epoch [54/100], Loss: 0.012540488690137862\n",
+      "Epoch [55/100], Loss: 0.01244213879108429\n",
+      "Epoch [56/100], Loss: 0.01253316830843687\n",
+      "Epoch [57/100], Loss: 0.012204955890774727\n",
+      "Epoch [58/100], Loss: 0.012123921141028404\n",
+      "Epoch [59/100], Loss: 0.011885198391973972\n",
+      "Epoch [60/100], Loss: 0.01178735215216875\n",
+      "Epoch [61/100], Loss: 0.011649258434772491\n",
+      "Epoch [62/100], Loss: 0.011530480533838271\n",
+      "Epoch [63/100], Loss: 0.01132415384054184\n",
+      "Epoch [64/100], Loss: 0.011226070486009121\n",
+      "Epoch [65/100], Loss: 0.011110935267060995\n",
+      "Epoch [66/100], Loss: 0.01089202780276537\n",
+      "Epoch [67/100], Loss: 0.010912156198173761\n",
+      "Epoch [68/100], Loss: 0.010661067999899387\n",
+      "Epoch [69/100], Loss: 0.010802296549081802\n",
+      "Epoch [70/100], Loss: 0.010689344070851804\n",
+      "Epoch [71/100], Loss: 0.010735079552978278\n",
+      "Epoch [72/100], Loss: 0.010512338392436505\n",
+      "Epoch [73/100], Loss: 0.010341690108180045\n",
+      "Epoch [74/100], Loss: 0.01008388763293624\n",
+      "Epoch [75/100], Loss: 0.010202163085341453\n",
+      "Epoch [76/100], Loss: 0.010201627574861049\n",
+      "Epoch [77/100], Loss: 0.010160424932837486\n",
+      "Epoch [78/100], Loss: 0.010137928836047649\n",
+      "Epoch [79/100], Loss: 0.010368561930954456\n",
+      "Epoch [80/100], Loss: 0.010181798972189427\n",
+      "Epoch [81/100], Loss: 0.00990898311138153\n",
+      "Epoch [82/100], Loss: 0.009973269421607256\n",
+      "Epoch [83/100], Loss: 0.009943171218037606\n",
+      "Epoch [84/100], Loss: 0.009898586850613355\n",
+      "Epoch [85/100], Loss: 0.010368978884071112\n",
+      "Epoch [86/100], Loss: 0.010025675408542156\n",
+      "Epoch [87/100], Loss: 0.009572182968258857\n",
+      "Epoch [88/100], Loss: 0.009413059428334236\n",
+      "Epoch [89/100], Loss: 0.009616098459810018\n",
+      "Epoch [90/100], Loss: 0.009560075961053372\n",
+      "Epoch [91/100], Loss: 0.009488210827112199\n",
+      "Epoch [92/100], Loss: 0.009881421644240617\n",
+      "Epoch [93/100], Loss: 0.009500569850206374\n",
+      "Epoch [94/100], Loss: 0.009231848828494548\n",
+      "Epoch [95/100], Loss: 0.009183386992663144\n",
+      "Epoch [96/100], Loss: 0.008891182392835617\n",
+      "Epoch [97/100], Loss: 0.009118691366165877\n",
+      "Epoch [98/100], Loss: 0.00911692315712571\n",
+      "Epoch [99/100], Loss: 0.009281879384070634\n",
+      "Epoch [100/100], Loss: 0.008897613454610109\n",
       "모델 저장이 완료되었습니다.\n"
      ]
     }
@@ -360,9 +365,7 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.nn.utils.rnn import pad_sequence\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from custom_dataset import CustomDataset\n",
+    "from torch.utils.data import DataLoader\n",
     "from rnn_model import RNNModel\n",
     "\n",
     "# 수정된 PaddingCollate 클래스\n",
@@ -414,7 +417,7 @@
     "\n",
     "# 모델 생성\n",
     "input_size = 2  # 입력 차원 설정 (pin1과 pin2)\n",
-    "hidden_size = 50  # 은닉 상태의 크기 설정\n",
+    "hidden_size = 100  # 은닉 상태의 크기 설정\n",
     "output_size = 1  # 출력 차원 설정\n",
     "num_layers = 2\n",
     "model = RNNModel(input_size, hidden_size, output_size, num_layers)\n",
