refactor: edit hidden_size in articulation_correction_module

--- a/jupyter_lab/articulation_correction_module.ipynb
+++ b/jupyter_lab/articulation_correction_module.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "b67426ca-4976-4058-8afd-705ea02a4293",
    "metadata": {},
    "outputs": [
@@ -32,17 +32,53 @@
      "text": [
       "--------Arduino ON--------\n",
       "Start measurement\n",
-      "End measurement. (1.71sec)\n",
+      "End measurement. (0.90sec)\n",
+      "예상되는 조음 발음 위치: 양순음(bilabial)\n",
+      "Start measurement\n",
+      "End measurement. (0.90sec)\n",
       "예상되는 조음 발음 위치: 치조음(alveolar)\n",
       "Start measurement\n",
-      "End measurement. (1.91sec)\n",
-      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "End measurement. (1.11sec)\n",
+      "예상되는 조음 발음 위치: 연구개음(soft_palate)\n",
       "Start measurement\n",
       "End measurement. (1.10sec)\n",
       "예상되는 조음 발음 위치: 치조음(alveolar)\n",
       "Start measurement\n",
+      "End measurement. (1.21sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.80sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (1.21sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.70sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.80sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.90sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.90sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.70sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (0.90sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (1.71sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
+      "End measurement. (1.11sec)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
+      "Start measurement\n",
       "End measurement. (1.30sec)\n",
-      "예상되는 조음 발음 위치: 연구개음(soft_palate)\n",
+      "예상되는 조음 발음 위치: 치조음(alveolar)\n",
       "Stop\n"
      ]
     }
@@ -61,7 +97,7 @@
     "model_file = 'rnn_model.pth'\n",
     "\n",
     "# 모델 불러오기\n",
-    "model = RNNModel(input_size=2, hidden_size=50, output_size=1, num_layers=2)\n",
+    "model = RNNModel(input_size=2, hidden_size=100, output_size=1, num_layers=2)\n",
     "model.load_state_dict(torch.load(model_file))\n",
     "model.eval()  # 평가 모드로 설정\n",
     "\n",
@@ -133,6 +169,14 @@
     "    ser.close()\n",
     "    print(\"Serial port closed.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1816c789-8a50-4cfc-b55e-14a82ef5cad3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
